<resources>
    <string name="app_name">Recycling</string>
    <string name="path_service">https://garbage-recycling.herokuapp.com/api/</string>
    <!-- Register Hidden-->
    <string name="reg_FN">Nombre</string>
    <string name="reg_LN">Apellido</string>
    <string name="reg_UN">Usuario</string>
    <string name="reg_A">Dirección</string>
    <string name="reg_E">Email</string>

    <!-- Register Error Messages  -->
    <string name="err_FN">"Es necesario ingresar un Nombre"</string>
    <string name="err_LN">"Es necesario ingresar un Apellido"</string>
    <string name="err_UN">"Es necesario ingresar un Usuario"</string>
    <string name="err_A">"Es necesario ingresar una Dirección"</string>
    <string name="err_E">"Es necesario ingresar un E-Mail"</string>

    <!-- Residuos -->
    <string-array name="residues">
        <item>bottles</item>
        <item>tetrabriks</item>
        <item>glass</item>
        <item>paperboard</item>
        <item>cans</item>
    </string-array>

    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="nav_actual">Actual</string>
    <string name="nav_historical">Historial</string>

    <string name="menu_home">Principal</string>
    <string name="menu_recycling">Reciclar</string>
    <string name="menu_account">Mi Cuenta</string>
    <string name="menu_listRecycling">Mis Reciclados</string>

    <string name="empty_recycled">No existen reciclados</string>

</resources>
