<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.app.recycling.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.android.app.recycling.ui.recycling.RecyclingFragment"
        android:label="@string/menu_recycling"
        tools:layout="@layout/fragment_recycling" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.android.app.recycling.ui.account.Account"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
    <fragment
        android:id="@+id/nav_listRecycling"
        android:name="com.android.app.recycling.ui.listRecycler.listRecycling"
        android:label="Mis Reciclados"
        tools:layout="@layout/fragment_list_recycling" />
</navigation>